--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -24,12 +24,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Download text file
-        uses: actions/upload-artifact@v4
+        uses: actions/download-artifact@v4
         with:
           name: hello-artifact
           path: ./artifacts/hello.txt
           
       - name: Display content of the text file
         run: cat ./artifacts/hello.txt
+
 
 
