--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -27,10 +27,11 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: hello-artifact
-          path: ./artifacts/hello.txt
+          path: ./artifacts
           
       - name: Display content of the text file
         run: cat ./artifacts/hello.txt
+
 
 
 
